--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -26,16 +26,37 @@
   opacity: 0;
   transform: translateX(-350px);
 }
+
 .post-enter-active {
   opacity: 1;
   transform: translateX(0px);
   transition: all 500ms ease-in;
 }
+
 .post-exit {
   opacity: 1;
 }
+
 .post-exit-active {
   opacity: 0;
   transform: translateX(-350px);
   transition: all 500ms ease-in;
+}
+
+.page__wrapper {
+  margin-top: 30px;
+  display: flex;
+}
+
+.page {
+  padding: 10px;
+  border: 1px solid teal;
+  color: teal;
+  cursor: pointer;
+}
+
+.page__current {
+  font-weight: bold;
+  border: 2px solid orange;
+  color: orange;
 }
